...
        android:inputType="textPersonName"
        android:hint="@string/group_name"
        android:layout_alignStart="@+id/enter_Prompt2"
        android:importantForAutofill="no" tools:targetApi="o" />

    <Button
        android:id="@+id/button_Submit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="285dp"
        android:text="@string/submit" />

    <Button
        android:id="@+id/button_Cancel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="222dp"
        android:text="@string/cancel" />
...
